--- a/src/index.css
+++ b/src/index.css
@@ -36,20 +36,27 @@ button{
 .game{
   width: 26rem; 
   height: 26rem; 
-  color: rgb(0, 255, 234);
+  color: rgb(255, 244, 148);
   background-color: rgb(155, 154, 154);
   font-size: 1.8rem;
+  font-weight: 900;
   margin: 0 auto;
   padding: 0 2rem;
   padding-bottom: 3.3rem;
   padding-top: 1.2rem;
   margin-top: 4rem;
   border: 2px solid rgb(2, 247, 255);
-  box-shadow: 0rem 0rem .1rem 4rem rgb(78, 65, 78) ;
+  box-shadow: 0rem 0rem .1rem 4rem rgb(153, 105, 153) ;
   border-radius: .4rem;
 }
 .game-board{
   text-align: center;
   border-radius: .4rem;
+}
+.reset-btn{
+  font-size:1.8rem;
+  position: absolute;
+  margin-left: 12rem;
+  cursor:default;
 }
 
